# phrase-segmentation

./: Cargo.toml  justfile  rustfmt.toml
src/: document.rs  lib.rs  main.rs
