[package]
name = "phrase-segmentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
ouroboros = "0.17.2"
serde = { version = "1.0.188", features = ["derive"] }
serde-jsonlines = "0.4.0"
serde_json = "1.0.105"
suffix_array = "0.5.0"
